# sbt.-firmware.boxes.batteries-lifepo4

./: CMakeLists.txt
App/: CMakeLists.txt
App/Firmware/: CMakeLists.txt  main.cpp
App/Firmware/Tasks/: BatterySystem.cpp
App/Tasks/: BatteryPack.cpp  BatteryPack.hpp  BatterySystem.cpp  BatterySystem.hpp  TaskManager.cpp
